
cc_library(
	name = "smart_ptr",
	visibility = ["//visibility:public"],
	includes = [
		"include/",
	],
	hdrs = glob([
		"include/boost/**/*.hpp",
		"include/boost/**/*.ipp",
	]),
	srcs = [
	],
	defines = [
	],
	deps = [
		"@com_github_bazelboost_config//:config",
		"@com_github_bazelboost_static_assert//:static_assert",
		"@com_github_bazelboost_type_traits//:type_traits",
		"@com_github_bazelboost_assert//:assert",
		"@com_github_bazelboost_core//:core",
		"@com_github_bazelboost_throw_exception//:throw_exception",
		"@com_github_bazelboost_move//:move"
	],
)
