load("@rules_cc//cc:defs.bzl", "cc_library")

_public_hdrs = [
    "include/boost/*.hpp",
    "include/boost/smart_ptr/*.hpp",
]

cc_library(
    name = "smart_ptr_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _public_hdrs),
    deps = [
        "@boost//core",
        "@boost//throw_exception",
    ],
)

cc_library(
    name = "smart_ptr",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(_public_hdrs),
    deps = [
        ":smart_ptr_internal",
        "@boost//config",
        "@boost//move",
        "@boost//static_assert",
        "@boost//type_traits",
    ],
)
